Aggiunti requirements e warning per componenti non finiti

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -106,6 +106,17 @@
 {% else %}
         {# show a cookie consent banner #}
         <div id="cookie-consent-container" class="cookie-consent-container">
+          <div class="alert alert-warning" role="alert">
+            🚧  SITO IN FASE DI COSTRUZIONE 🚧
+            <p>
+            Questo è un sito di prova con contenuti preliminari, le informazioni riportate potrebbero non essere accurate ed alcune funzionalità non essere disponibili.
+            </p>
+            🚧  WORK IN PROGRESS 🚧
+            <p>
+            This is a test website. The content might not be accurate and functional.
+          </p>
+          </div>
+          
           Questo sito o gli strumenti terzi da questo utilizzati si avvalgono di cookie necessari al funzionamento ed utili alle finalità illustrate nella cookie policy. Se vuoi saperne di più o negare il consenso a tutti o ad alcuni cookie, consulta la cookie policy. Chiudendo questo banner, scorrendo questa pagina, cliccando su un link o proseguendo la navigazione in altra maniera, acconsenti all’uso dei cookie.
           <a aria-label="learn more about cookies" role="button" tabindex="0" class="cc-link" href="https://www.univr.it/it/privacy#doc_26997" rel="noopener noreferrer nofollow" target="_blank">Info</a>
           <br>    
