Fix bug copisti con descrizioni interne multiple

--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -276,7 +276,7 @@ for (i = 0; i < acc.length; i++) {
         <div class="row">
           <div class="alert alert-warning" role="alert">
             <p class="text-center">🚧 <b>CATALOGAZIONE IN CORSO</b> 🚧</p>
-            Questa è una versione preliminare della scheda il catalogatore deve ancora revisionare le informazioni contenute.
+            Questa è una versione preliminare della scheda, il catalogatore deve ancora revisionare le informazioni contenute.
           </div>
         </div>
         {% endif %}
