--- a/templates/schedaprintableversion.html
+++ b/templates/schedaprintableversion.html
@@ -1,5 +1,5 @@
 <head>
-<meta name=”robots” content=”noindex,nofollow”>
+<meta name="robots" content="noindex,nofollow">
 <style>
 ol {
     counter-reset: item
