meta name="robots" content="none"

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="it">
   <head>
     <!-- Se non commentato il sito non verra indicizzato -->
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="none">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
