--- a/templates/ricercafiligrane.html
+++ b/templates/ricercafiligrane.html
@@ -153,8 +153,35 @@ RESULTS TABLE
 
 
 <br>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script>
+  function detailFormatter(index, row) {
+      var html = []
+      // html.push("<img src={{url_for('static',filename='filigrane/filename2.svg')}} style='padding: 0px 50px 0px 30px;float: left;'>")
+      $.each(row, function (key, value) {
+        if (key[0] != "_") {
+        html.push('<p class="fw-light" ><b>' + key + ':</b> ' + value + '</p>')
+
+        console.log(key)
+          if (key == 'ID'){
+            html.push("<img src='static/filigrane/"+value+".svg' alt='Watermark thumbnail' style='padding: 0px 5px 0px 0px;float: left;'>")
+
+          }
+          else if (key == 'sommario_desc'){
+            html.push('<p class="fw-light py-2 px-2" >' + value + '</p>')
+
+          }
+          else if (key == 'idscheda'){
+            html.push("<a class='btn btn-primary' href='"+value+"' role='button'>Vai alla scheda</a>")
+
+          }
+          // else{html.push(value + '&#8226;')}
+        
+        }
+      })
+      
+      return html.join('')
+    }
+  </script>
 
     
 {% endblock body %}
