Add roman to codicological unit

--- a/templates/risultati6dyn.html
+++ b/templates/risultati6dyn.html
@@ -106,10 +106,9 @@
           </div>
           </div>
 
-<button class="accordion">Storia del manoscritto</button>
+<button class="accordion" id="btn_storia_desc">Storia del manoscritto</button>
     <div class="panel">
-        <div class="show">
-          Il codice è una copia del IX secolo della Regula pastoralis di Gregorio Magno (cc. 4v-128v). La trascrizione dell'opera è preceduta, tra le carte 1v e 3r, da un sermone di Cesario di Arles, ed è seguita, tra le carte 129r e 130v, da un piccolo componimento anonimo noto come De ortu et obitu prophetarum et apostolorum.
+        <div class="show" id="show_storia_desc">
         </div>
   </div>
 
