Bibliografia generata su richiesta

--- a/templates/risultati6dyn.html
+++ b/templates/risultati6dyn.html
@@ -85,10 +85,10 @@
   </div>
 
 
-<button class="accordion">Bibliografia Esterna</button>
+<button class="accordion" id="btn_bibext">Bibliografia Esterna</button>
         <div class="panel">
           <br>
-
+          <div class="show" id="bibextshow"></div>
           <div class="show">
             {{bibliografia|safe}}
           </div>
