fix cambiato collassa in chiudi

--- a/templates/risultati6dyn.html
+++ b/templates/risultati6dyn.html
@@ -231,7 +231,7 @@ function mostraDI(elem) {
         <h5 class="text-dark">Navigazione:</h5>
           <div class="nav flex-column">
               <a class="text-dark" href="#content"> Torna all'inizio della pagina.</a>
-              <a class="text-dark" href="javascript:window.location.reload(true)"> Collassa le schede.</a>
+              <a class="text-dark" href="javascript:window.location.reload(true)"> Chiudi tutte le sezioni.</a>
           </div>
         </div>
     </div>
